<resources>
    <string name="app_name">Hide and Seek</string>
    <string name="action_settings">Settings</string>
    <string name="Hide">HIDE</string>
    <string name="outPutText"></string>
    <string name="no_location_detected">No Location</string>
    <string name="longitude_label">Longitude: </string>
    <string name="latitude_label">Latitude: </string>
    <string name="myText"></string>
    <string name="CheckUserLabel"></string>
    <string name="playername_text"></string>
    <string name="playername_label">Player\'s Name: </string>
    <string name="Checkuserbutton">Test CheckUser</string>
    <string name="title_activity_check_user">CheckUserActivity</string>
    <string name="CheckUser">Check User</string>
    <string name="hello_world"></string>
    <string name="title_activity_found_you">FoundYou</string>
    <string name="SearchText"></string>
    <string name="search_longitude_label">Longitude: </string>
    <string name="search_latitude_label">Latitude: </string>
    <string name="Seek">SEEK</string>
    <string name="title_activity_checkuser">Checkuser</string>
    <string name="title_activity_check_check_user">CheckCheckUserActivity</string>
</resources>
