<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hide"
        android:id="@+id/Hide"
        android:onClick="setHideLoc"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search Here"
        android:id="@+id/Seek"
        android:onClick="FoundYou"
        android:layout_alignBottom="@+id/Hide"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outPutText"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_label"
        android:id="@+id/latitude_label"
        android:layout_below="@+id/Hide"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latitude_text"
        android:layout_toEndOf="@+id/latitude_label"
        android:layout_alignBaseline="@+id/latitude_label"
        android:layout_below="@+id/Hide"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude_label"
        android:id="@+id/longitude_label"
        android:layout_below="@+id/latitude_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longitude_text"
        android:layout_toEndOf="@+id/longitude_label"
        android:layout_alignBaseline="@+id/longitude_label"
        android:layout_below="@+id/Hide"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myText"
        android:id="@+id/myText"
        android:layout_below="@+id/longitude_label"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Checkuserbutton"
        android:id="@+id/Checkuserbutton"
        android:onClick="CheckUser"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp" />

</RelativeLayout>
