<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ourgroupisawesome.groupassignment.FoundYou">

    <TextView
        android:id="@+id/Search_Text"
        android:text="@string/SearchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_longitude_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/search_latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_label"
        android:textSize="@dimen/lat_long_text_size"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/search_latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#7B85AD"
        android:textIsSelectable="true"
        android:textSize="@dimen/lat_long_text_size"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/search_latitude_label" />

    <TextView
        android:id="@+id/search_longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/longitude_label"
        android:layout_marginTop="@dimen/text_margin"
        android:textSize="@dimen/lat_long_text_size" />

    <TextView
        android:id="@+id/search_longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textIsSelectable="true"
        android:textColor="#7B85AD"
        android:textSize="@dimen/lat_long_text_size"
        android:layout_alignTop="@+id/search_longitude_label"
        android:layout_toEndOf="@+id/search_longitude_label" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Seek"
        android:id="@+id/SeekButton"
        android:onClick="Seek"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
